# tablet_pepper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backendbase.py  backendbase_robot.py  display_tablet.py  package.xml  rosbackend.py  rosbackend_robot.py  server.py  server_robot.py  setup.py  start_tablet_on_boot.py
src/: app.js  app.ts  backendbase.py  client.py  display_tablet.py  index.html  package.json  publish_topic.py  rosbackend.py  server.py  style.css  tablet_buche.py  tablet_cedric.py  tablet_maelic.py  tablet_maelic_v2.py  tablet_main.py  tablet_vizbox.py
src/demo-webpage/: app.js  app.ts  index.html  package-lock.json  package.json  style.css  test.js  tsconfig.json
src/dom-robocup-manager/: index.html  index.js  index.ts  start_tablet.py  start_tablet_on_boot.py
src/dom-robocup-manager/css/: style.css
src/dom-robocup-manager/final/: final.html
src/dom-robocup-manager/scripts/: deploy.py  deploy.sh  general.js  general.ts  gpsr.js  gpsr.ts  task.js
src/dom-robocup-manager/stage1/: stage1.html
src/dom-robocup-manager/stage2/: stage2.html
src/pepper_webpage/: app.js  app.ts  index.html  package.json  style.css  webpack.config.js
src/static/scripts/: script.js  scripts_backup.js
src/sveltekit-wbp-tablet/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
src/sveltekit-wbp-tablet/src/: app.css  app.d.ts  app.html  store.ts
src/tablet_backup/roboBreizh/: README.md  publish_topic.py  server.py  tablet_maelic.py  tablet_vizbox.py
src/templates/: challenge.html  challenge_backup.html
(+98 files in other folders)
