<?xml version="1.0"?>
<package>
  <name>tablet_pepper</name>
  <version>0.1.0</version>
  <description>Tablet interface for RoboCup@Home</description>

  <maintainer email="tomkimsour@gmail.com">Thomas UNG</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  
  <build_depend>rospy</build_depend>
</package>
